<resources>
    <string-array name="Select">
        <item>Select</item>
        <item>On Device</item>
        <item>No Signature</item>
        <item>E signature</item>
    </string-array>
    <string name="dashboard">Dashboard</string>
    <string name="billupload">Upload Picture</string>
    <string name="profile">Profile</string>
    <string name="start_enrollment">Begin Enrollment</string>
    <string name="reports">Reports</string>
    <string name="clients">Clients</string>
    <string name="sales_centers">Sales Centers</string>
    <string name="sales_center">Sales Center</string>
    <string name="time_zone">Timezone</string>
    <string name="select_time_zone">Select Timezone</string>
    <string name="commodity">Commodity</string>
    <string name="programs">programs</string>
    <string name="time_clock">Time Clock</string>
    <string name="log_out">Log out</string>
    <string name="setting">Settings</string>
    <string name="dual_fuel">Dual Fuel</string>
    <string name="electricity">Electricity</string>
    <string name="natural_gas">Natural Gas</string>
    <string name="new_password">New Password</string>
    <string name="forogt_password">Forgot Password</string>
    <string name="customer_data">Customer Details</string>
    <string name="recording">Recording</string>
    <string name="success">Success</string>
    <string name="statement">Statement</string>
    <string name="skip"><![CDATA[Skip>]]></string>
    <string name="lead_details">Lead Details</string>
    <string name="edit">Edit</string>
    <string name="lead_enroll">Begin Enrollment</string>
    <string name="e_signature">E-Signature</string>
    <string name="cancel">Cancel</string>
    <string name="skip_btn">Skip</string>
    <string name="yes">Yes</string>
    <string name="proceed">Proceed</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="reshot">Reshot</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="verify">Verify</string>
    <string name="self_verify">Self Verify</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_started">Get Started</string>
    <string name="send_link">Send Link</string>
    <string name="cancel_enrollment">Cancel Enrollment</string>
    <string name="delete_enrollment">Delete Enrollment</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="enter_authorised_first_name">Please enter authorised first name</string>
    <string name="enter_authorised_middle_name">Please enter authorised middle name</string>
    <string name="enter_authorised_last_name">Please enter authorised last name</string>
    <string name="enter_billing_first_name">Please enter billing first name</string>
    <string name="enter_first_name">Please enter  first name</string>
    <string name="enter_middle_name">Please enter  middle name</string>
    <string name="enter_last_name">Please enter  last name</string>
    <string name="is_required">is required</string>
    <string name="enter_billing_middle_name">Please enter billing middle name</string>
    <string name="enter_billing_last_name">Please enter billing last name</string>
    <string name="enter_billing_address">Please enter billing address</string>
    <string name="enter_zipcode">Please enter zipcode</string>
    <string name="enter_service_address">Please enter service address</string>
    <string name="enter_address">Please enter address</string>
    <string name="enter_service_unit">Please enter service unit</string>
    <string name="enter_billing_unit">Please enter billing unit</string>
    <string name="enter_service_zipcode">Please enter service zipcode</string>
    <string name="enter_account_number">Please enter account number</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="enter_otp">Enter verification code</string>
    <string name="enter_phone_number">Please enter Phone number</string>
    <string name="enter_new_relationship">Enter New Relationship</string>
    <string name="enter_unit">Please enter unit</string>
    <string name="enter_subject">Please enter subject</string>
    <string name="enter_description">Please enter description</string>
    <string name="please_enter">Please enter</string>
    <string name="please_select">Please select</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="logout">Logout</string>
    <string name="msg_log_out">Are you sure you want to log out?</string>
    <string name="msg_skip">If you skip, then your recording will be deleted</string>
    <string name="msg_skip_image">If you skip, then your Image will be deleted</string>
    <string name="msg_no_utilitiy_available">No utilities available for selected zipcode</string>
    <string name="msg_no_utilitiy_available_state">No utilities available for selected state</string>
    <string name="no_internet_connection_message">Network seams to be offline. Please try again later</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="msg_confirmation_again_record">Your current recording will be deleted.</string>
    <string name="no_data_found">No Leads Available</string>
    <string name="error">Error</string>
    <string name="msg_zipcode_not_match">Your current location does not match the customer\'s service address.</string>
    <string name="msg_gps_location">Your GPS Location seams to be off. Please turn on GPS and try again.</string>
    <string name="msg_unable_detect_location">Unable to detect location. Please try again.</string>
    <string name="msg_location">Unable to retrieve your location at this moment. Please try again later</string>
    <string name="msg_location_access">The app uses the location in the background when you clock in. Your live location is viewable by your manager at any time during your workday. This is to ensure you are only working in your assigned sales areas and reduces sales fraud.</string>
    <string name="pending">Pending</string>
    <string name="verified">Verified</string>
    <string name="declined">Declined</string>
    <string name="disconnected">Disconnected</string>
    <string name="expired">Expired</string>
    <string name="cancelled">Cancelled</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="verification_id">Verification ID:</string>
    <string name="pending_leads">Pending Leads</string>
    <string name="declined_leads">Declined Leads</string>
    <string name="disconnected_calls">Disconnected Calls</string>
    <string name="verified_leads">Verified Leads</string>
    <string name="cancelled_leads">Cancelled Leads</string>
    <string name="expired_leads">Expired Leads</string>
    <string name="self_verified_leads">Self Verified Leads</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">Username</string>
    <string name="email_address_agent_id_hint">Email Address / Agent Id</string>
    <string name="password_hint">********</string>
    <string name="password">Password</string>
    <string name="zipcode">Enter Zip Code</string>
    <string name="select_state">Select State</string>
    <string name="or">OR</string>
    <string name="return_to_login">Return to Login</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="utility">Utility</string>
    <string name="electric_utility">Electric Utility</string>
    <string name="copy_from">Copy from</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number </string>
    <string name="msg_statement">
        These Terms and Conditions apply to customers offered the XYZ Energy Price Promise. If there is any conflict between these Terms and Conditions and the XYZ Energy Residential Agreement, these Terms and Conditions shall prevail. Any capitalised terms set out in these terms which are not defined in these Terms and Conditions have the same meaning as set out in the XYZ Energy Residential Agreement.\n\nAvailability.\nThe XYZ Energy Price Promise is only available for residential customers who have been offered the XYZ Energy Price Promise. The XYZ Energy Price Promise is only available in a selected number of regions and for a limited period of time. The XYZ Energy Price Promise offer may be extended to other regions and for additional time at XYZ Energy\'s sole discretion. The Price Promise applies only to fixed and variable electricity Energy rates paid on a monthly basis based on billing days or metered Energy. The Price Promise does not apply to Delivery charges or any LPG or Natural Gas related charges. Any other credits or fees you may receive or incur from time to time in accordance with the XYZ Energy Residential Agreement are not subject to the Price Promise. Price Protection applies to your Energy Rate for two years from the date you originally switched to this product and does not apply to charges under Delivery on your Price Plan which includes Network Services, Retailer Services and Metering. Beyond the Price Protection period we will give you notice of any change in accordance with the XYZ Energy Residential Agreement.\n\nIf you accept the supply of Energy from Us pursuant to Our Price Promise then this Agreement is conditional on XYZ Energy being satisfied in all respects with the rates You are currently paying You electricity provider and any PPD You receive from them, as well as whether or not We are using the correct configuration for Your account. XYZ Energy reserves the right to request a copy of your most recent electricity bill from your current electricity provider and to contact your local Lines Company to satisfy itself as to these matters.  The Price Promise cannot be taken to another network, but can be taken between properties on the same network if the price plan is still available.\n\nXYZ Energy seeks to pass through Network Service Charges. XYZ Energy seeks to recover the total charge it faces across all relevant consumers. An individual consumer/’s charges may differ between the levelled charge and the underlying Network Charge due to changes in the timing of consumption.
    </string>
    <string name="msg_agree_statement">I verify that I have read and agree to the terms and conditions.</string>
    <string name="account_holder_name">Account Holder Name :</string>
    <string name="signature">Signature</string>
    <string name="thank_you">Thank You!</string>
    <string name="e_signature_verification_method">Choose method of e-signature verification: </string>
    <string name="phone">Phone</string>
    <string name="back_to_dashboard">Back to  Dashboard</string>
    <string name="leads_status">Leads Status</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="unit">Unit No.</string>
    <string name="name_char">ÂÃÄÀÁÅÆÇÈÉÊËÌÍÎÏÐÑÒÓÔÕÖØÙÚÛÜÝÞßàáâãäåæçèéêëìíîïðñòóôõöøùúûüýþÿabcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ-0123456789</string>
    <string name="sms">SMS</string>
</resources>