<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="item"
            type="com.tpv.android.model.network.DynamicFormResp" />

        <variable
            name="key"
            type="com.tpv.android.utils.AppConstant" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTitle"
                style="@style/TertiaryBoldTextWithTopSpacing"
                android:layout_weight="1"
                android:text="@{item.label}"
                android:textAllCaps="true"
                app:visibleIf="@{!TextUtils.isEmpty(item.label)}"
                tools:text="@string/address" />

            <TextView
                android:id="@+id/textCopyFrom"
                style="@style/SecondaryNormalSmallText"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/copy_from"
                app:visibleIf="@{item.meta.isAllowCopy()==true}"
                android:textColor="@color/colorTertiaryText" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/AddressFormTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddressLineOne"
                style="@style/DefaultEditText"
                android:focusable="false"
                android:hint="@string/address_line_1"
                android:text='@={item.values[key.ADDRESS1]}' />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AddressFormTextInputLayout"
                android:layout_weight="1">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editAddressLineTwo"
                    style="@style/DefaultEditText"
                    android:hint="@string/address_line_2"
                    android:text='@={item.values[key.ADDRESS2]}' />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AddressFormTextInputLayout"
                android:layout_weight="2">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUnit"
                    style="@style/DefaultEditText"
                    android:digits="@string/name_char"
                    android:hint="@string/unit"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text='@={item.values[key.UNIT]}' />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/AddressFormTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editZipcode"
                style="@style/DefaultEditText"
                android:focusable="false"
                android:hint="@{@string/city + ',' + ' '+ @string/state + ',' + ' ' + @string/zip_code}"
                app:city="@{item.values[key.CITY]}"
                app:state="@{item.values[key.STATE]}"
                app:zipcode="@{item.values[key.ZIPCODE]}"
                tools:hint="City, State, Zipcode" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/AddressFormTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCountry"
                style="@style/DefaultEditText"
                android:focusable="false"
                android:hint="@string/country"
                android:text='@={item.values[key.COUNTRY]}' />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>