<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBg"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/ic_company_logo" />

            <TextView
                style="@style/PrimaryBigBoldText"
                android:text="@string/forogt_password" />

            <TextView
                style="@style/SecondaryNormalText"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley " />

            <TextView
                style="@style/SecondaryNormalText"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/email_address" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btnSubmit"
            style="@style/ButtonPrimary"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/textReturnToLogin"
            style="@style/SecondaryNormalText"
            android:layout_gravity="center"
            android:text="@string/return_to_login"
            android:textColor="@color/colorTertiaryText" />

    </LinearLayout>


</layout>