<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.tpv.android.model.SaveLeadsDetailResp" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.enrollment.planszipcode.PlansZipcodeFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_24sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/ic_verified_img" />

                <TextView
                    style="@style/PrimaryMediumBoldText"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/thank_you"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTertiaryText" />

                <TextView
                    style="@style/SecondaryNormalSmallText"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/your_reference_id" />

                <TextView
                    style="@style/PrimaryNormalSmallText"
                    android:text="@{item.referenceId}"
                    tools:text="it-it-iso-1356" />

                <TextView
                    style="@style/PrimaryNormalText"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:text="@string/self_verification" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBoxEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <CheckBox
                        android:id="@+id/checkBoxPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:text="@string/phone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btnVerify"
                    style="@style/ButtonPrimary"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/verify" />

                <TextView
                    android:id="@+id/textBackToDashBoard"
                    style="@style/PrimaryBoldText"
                    android:text="@string/back_to_dashboard"
                    android:textColor="@color/colorTertiaryText" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>